Refactoring in project tests, endpoints, services and utilities